# gift-ares

gift-ares/: COPYING  ChangeLog  Make.msvc  Makefile.am  Makefile.msvc  README.win32  TODO  configure.ac
gift-ares/aresdll/: README  ar_search.c  aresdll.h
gift-ares/aresdll/test/: AresDLL.pas  arestest.dfm  arestest.pas
gift-ares/crawler/: main.c
gift-ares/data/: Ares.conf.template  Makefile.am  nodes
gift-ares/filesrv/: Makefile  README  TODO  hasher.c  server.c
gift-ares/gift/: Makefile  Makefile.am  TODO  as_gift_plugin.c  asp_download.c  asp_hash.c  asp_hashmap.c  asp_hashmap.h  asp_plugin.c  asp_plugin.h  asp_search.c  asp_share.c  asp_upload.c
gift-ares/lib/: Makefile  Makefile.am  Makefile.msvc  as_ares.c  as_ares.h  as_config.c  as_crypt.c  as_crypt.h  as_download.c  as_download.h  as_download_1.c  as_download_1.h  as_download_chunk.c  as_download_chunk.h  as_download_conn.c  as_download_conn.h  as_download_man.c  as_download_man.h  as_download_state.c  as_encoding.c  as_encoding.h  as_event.c  as_event.h  as_hash.c  as_hash.h  as_hashtable.c  as_hashtable.h  as_http_client.c  as_http_client.h  as_http_header.c  as_http_server.c  as_http_server.h  as_incoming.c  as_incoming.h  as_list.c  as_list.h  as_log.c  as_log.h  as_meta.c  as_meta.h  (+41 more)
gift-ares/test/: Makefile  Makefile.msvc  cmd.c  cmd.h  main.c  main.h  nodes  testing.c  testing.h
gift-ares/tools/: Makefile  Makefile~  ares_arlnk.c  ares_decrypt_2.c  ares_http.c  ares_ip2port.c  ares_login.c  gift2shares.pl  readshares.pl  sniff.c
gift-ares/win32/: Makefile.am  gift-ares.nsi  zlib.msvc
(+5 files in other folders)
